--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,6 @@ env:
   PYTHON_VERSION: '3.11'
   S3_BUCKET: only-unity-build
   S3_BASE_PATH: shoe-monitor-builds
-  VERIFIED_EMAIL: monika@wildace.in
 
 jobs:
 
@@ -87,16 +86,6 @@ jobs:
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
           S3_PATH="s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/intel/${TIMESTAMP}"
           aws s3 cp "dist-macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip" "${S3_PATH}/"
-          echo "MACOS_INTEL_TIMESTAMP=${TIMESTAMP}" >> $GITHUB_ENV
-
-      - name: 💾 Save timestamp
-        run: echo "${{ env.MACOS_INTEL_TIMESTAMP }}" > timestamp.txt
-
-      - name: 📤 Upload timestamp artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: timestamp-macos-intel
-          path: timestamp.txt
 
   # ==================== macOS Apple Silicon BUILD ====================
   build-macos-arm:
@@ -432,7 +421,7 @@ jobs:
           $S3_PATH = "s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/windows/${TIMESTAMP}/"
           aws s3 cp "dist/${{ env.APP_NAME }}-Windows.zip" $S3_PATH
 
-  # ==================== EMAIL NOTIFICATION JOB (FIXED) ====================
+  # ==================== EMAIL NOTIFICATION (COMPLETELY FIXED) ====================
   notify:
     name: 📧 Send Build Notification Email
     needs: [build-macos-intel, build-macos-arm, build-linux-22, build-linux-24, build-windows]
@@ -456,100 +445,55 @@ jobs:
           fi
 
       - name: 📝 Build Email Content
-        id: email
         run: |
           TIMESTAMP=$(date +"%Y-%m-%d %H:%M:%S UTC")
           BUILD_DATE=$(date +%Y%m%d-%H%M%S)
           STATUS="${{ steps.status.outputs.status }}"
           EMOJI="${{ steps.status.outputs.emoji }}"
           
-          echo "SUBJECT=${EMOJI} Build ${STATUS} - ${{ env.APP_NAME }}" >> $GITHUB_ENV
+          cat <<'EOF' > email.txt
+          Hello Wildace Team,
 
-          cat <<EOF > email.html
-          <!DOCTYPE html>
-          <html>
-          <head>
-              <style>
-                  body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-                  .container { max-width: 800px; margin: 0 auto; padding: 20px; }
-                  .header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 30px; border-radius: 10px; text-align: center; }
-                  .header h1 { margin: 0; font-size: 28px; }
-                  .status { margin: 20px 0; padding: 15px; border-radius: 8px; }
-                  .success { background: #d4edda; border-left: 4px solid #28a745; }
-                  .partial { background: #fff3cd; border-left: 4px solid #ffc107; }
-                  .builds { margin: 20px 0; }
-                  .build-item { background: #f8f9fa; padding: 15px; margin: 10px 0; border-radius: 8px; border-left: 4px solid #007bff; }
-                  .build-item h3 { margin: 0 0 10px 0; color: #495057; }
-                  .build-status { display: inline-block; padding: 5px 10px; border-radius: 5px; font-size: 12px; font-weight: bold; }
-                  .status-success { background: #28a745; color: white; }
-                  .status-failure { background: #dc3545; color: white; }
-                  .download-btn { display: inline-block; background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; margin-top: 10px; }
-                  .download-btn:hover { background: #0056b3; }
-                  .footer { margin-top: 30px; padding: 20px; background: #f8f9fa; border-radius: 8px; text-align: center; color: #6c757d; }
-              </style>
-          </head>
-          <body>
-              <div class="container">
-                  <div class="header">
-                      <h1>${EMOJI} Build Notification</h1>
-                      <p style="margin: 10px 0 0 0;">${{ env.APP_NAME }}</p>
-                  </div>
+          A new multi-platform build has been completed.
 
-                  <div class="status $([ "${STATUS}" == "SUCCESS" ] && echo "success" || echo "partial")">
-                      <strong>Build Status:</strong> ${EMOJI} ${STATUS}<br>
-                      <strong>Timestamp:</strong> ${TIMESTAMP}<br>
-                      <strong>Build ID:</strong> ${BUILD_DATE}
-                  </div>
+          ==============================
+          🚀 APPLICATION: ${{ env.APP_NAME }}
+          📌 TIMESTAMP: ${TIMESTAMP}
+          📊 STATUS: ${EMOJI} ${STATUS}
+          ==============================
 
-                  <div class="builds">
-                      <h2>📦 Build Results</h2>
+          BUILD RESULTS:
+          📦 macOS (Intel): ${{ needs.build-macos-intel.result }}
+          🍎 macOS (Apple Silicon): ${{ needs.build-macos-arm.result }}
+          🐧 Linux Ubuntu 22.04: ${{ needs.build-linux-22.result }}
+          🐧 Linux Ubuntu 24.04: ${{ needs.build-linux-24.result }}
+          🪟 Windows: ${{ needs.build-windows.result }}
 
-                      <div class="build-item">
-                          <h3>🍎 macOS Intel</h3>
-                          <span class="build-status $([ "${{ needs.build-macos-intel.result }}" == "success" ] && echo "status-success" || echo "status-failure")">${{ needs.build-macos-intel.result }}</span>
-                          <br>
-                          <a href="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/intel/${BUILD_DATE}/${{ env.APP_NAME }}-macOS-Intel.zip" class="download-btn">Download</a>
-                      </div>
+          ==============================
+          DOWNLOAD LINKS:
+          ==============================
 
-                      <div class="build-item">
-                          <h3>🍎 macOS Apple Silicon</h3>
-                          <span class="build-status $([ "${{ needs.build-macos-arm.result }}" == "success" ] && echo "status-success" || echo "status-failure")">${{ needs.build-macos-arm.result }}</span>
-                          <br>
-                          <a href="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/arm/${BUILD_DATE}/${{ env.APP_NAME }}-macOS-AppleSilicon.zip" class="download-btn">Download</a>
-                      </div>
+          📦 macOS Intel:
+          https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/intel/${BUILD_DATE}/${{ env.APP_NAME }}-macOS-Intel.zip
 
-                      <div class="build-item">
-                          <h3>🐧 Linux Ubuntu 22.04</h3>
-                          <span class="build-status $([ "${{ needs.build-linux-22.result }}" == "success" ] && echo "status-success" || echo "status-failure")">${{ needs.build-linux-22.result }}</span>
-                          <br>
-                          <a href="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-22.04/${BUILD_DATE}/${{ env.APP_NAME }}-ubuntu22.04" class="download-btn">Download</a>
-                      </div>
+          🍎 macOS Apple Silicon:
+          https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/arm/${BUILD_DATE}/${{ env.APP_NAME }}-macOS-AppleSilicon.zip
 
-                      <div class="build-item">
-                          <h3>🐧 Linux Ubuntu 24.04</h3>
-                          <span class="build-status $([ "${{ needs.build-linux-24.result }}" == "success" ] && echo "status-success" || echo "status-failure")">${{ needs.build-linux-24.result }}</span>
-                          <br>
-                          <a href="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-24.04/${BUILD_DATE}/${{ env.APP_NAME }}-ubuntu24.04" class="download-btn">Download</a>
-                      </div>
+          🐧 Linux Ubuntu 22.04:
+          https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-22.04/${BUILD_DATE}/${{ env.APP_NAME }}-ubuntu22.04
 
-                      <div class="build-item">
-                          <h3>🪟 Windows</h3>
-                          <span class="build-status $([ "${{ needs.build-windows.result }}" == "success" ] && echo "status-success" || echo "status-failure")">${{ needs.build-windows.result }}</span>
-                          <br>
-                          <a href="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/windows/${BUILD_DATE}/${{ env.APP_NAME }}-Windows.zip" class="download-btn">Download</a>
-                      </div>
-                  </div>
+          🐧 Linux Ubuntu 24.04:
+          https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-24.04/${BUILD_DATE}/${{ env.APP_NAME }}-ubuntu24.04
 
-                  <div class="footer">
-                      <p><strong>GitHub Actions Run:</strong><br>
-                      <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}</a></p>
-                      <p style="margin-top: 20px;">
-                          <em>This is an automated message from Wildace Build System</em>
-                      </p>
-                  </div>
-              </div>
-          </body>
-          </html>
+          🪟 Windows:
+          https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/windows/${BUILD_DATE}/${{ env.APP_NAME }}-Windows.zip
+
+          ==============================
+          🔗 GitHub Actions:
+          ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+          Regards,
+          Wildace Automated Build System
           EOF
 
       - name: 📧 Send Email via AWS SES
@@ -560,17 +504,15 @@ jobs:
           secure: tls
           username: ${{ secrets.SES_USER }}
           password: ${{ secrets.SES_PASS }}
-          subject: ${{ env.SUBJECT }}
-          to: ${{ env.VERIFIED_EMAIL }}
-          from: ${{ env.VERIFIED_EMAIL }}
-          body: file://email.html
-          html_body: file://email.html
-          convert_markdown: false
+          subject: "${{ steps.status.outputs.emoji }} Build ${{ steps.status.outputs.status }} - ${{ env.APP_NAME }}"
+          to: monika@wildace.in
+          from: monika@wildace.in
+          body: file://email.txt
 
-      - name: 📧 Fallback - Print Email Content (if email fails)
+      - name: 📧 Fallback - Print Email if Failed
         if: failure()
         run: |
+          echo "========================================" 
+          echo "❌ EMAIL SEND FAILED"
           echo "========================================"
-          echo "EMAIL NOTIFICATION FAILED"
-          echo "========================================"
-          cat email.html
+          cat email.txt
