--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,12 +28,10 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
@@ -41,7 +39,6 @@ jobs:
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build macOS .app (Intel)
         run: |
           mkdir -p hooks
@@ -70,20 +67,17 @@ jobs:
           mkdir -p dist-macos-intel
           cd dist
           zip -r -y "../dist-macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip" "${{ env.APP_NAME }}.app"
-
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: macos-intel-build
           path: dist-macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -102,12 +96,10 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
@@ -115,7 +107,6 @@ jobs:
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build macOS .app (ARM)
         run: |
           mkdir -p hooks
@@ -150,14 +141,12 @@ jobs:
         with:
           name: macos-arm-build
           path: dist-macos-arm/${{ env.APP_NAME }}-macOS-AppleSilicon.zip
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -176,12 +165,10 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install system dependencies
         run: |
           sudo apt-get update
@@ -190,14 +177,12 @@ jobs:
             libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
             libswscale-dev libavformat-dev libavcodec-dev \
             zlib1g-dev fuse libfuse2 imagemagick
-
       - name: 📦 Install Python deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build Linux Binary
         run: |
           pyinstaller \
@@ -211,20 +196,17 @@ jobs:
           mkdir -p dist-linux-22
           chmod +x dist/${{ env.APP_NAME }}
           mv dist/${{ env.APP_NAME }} dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04
-
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-22-build
           path: dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -243,12 +225,10 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install system dependencies
         run: |
           sudo apt-get update
@@ -257,14 +237,12 @@ jobs:
             libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
             libswscale-dev libavformat-dev libavcodec-dev \
             zlib1g-dev libfuse2t64 imagemagick
-
       - name: 📦 Install Python deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build Linux Binary
         run: |
           pyinstaller \
@@ -284,14 +262,12 @@ jobs:
         with:
           name: linux-24-build
           path: dist-linux-24/${{ env.APP_NAME }}-ubuntu24.04
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -317,12 +293,10 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: 📦 Install dependencies
         shell: pwsh
         run: |
@@ -332,7 +306,6 @@ jobs:
           pip install kivy[base]==2.3.0 kivy_deps.sdl2==0.7.0 kivy_deps.glew==0.3.1 kivy_deps.angle==0.4.0
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔧 Create PyInstaller spec file
         shell: pwsh
         run: |
@@ -485,13 +458,9 @@ jobs:
           Download Links:
 
           macOS Intel: ${{ needs.build-macos-intel.outputs.s3_url }}
-
           macOS Apple Silicon: ${{ needs.build-macos-arm.outputs.s3_url }}
-
           Linux Ubuntu 22.04: ${{ needs.build-linux-22.outputs.s3_url }}
-
           Linux Ubuntu 24.04: ${{ needs.build-linux-24.outputs.s3_url }}
-
           Windows: ${{ needs.build-windows.outputs.s3_url }}
 
           ---
@@ -502,10 +471,18 @@ jobs:
 
           TOPIC_ARN=$(aws sns create-topic --name wildace-build-notifications --region us-west-2 --query 'TopicArn' --output text)
           
+          # Existing subscription
           aws sns subscribe \
             --topic-arn "${TOPIC_ARN}" \
             --protocol email \
             --notification-endpoint monika@wildace.in \
+            --region us-west-2 2>/dev/null || true
+
+          # ⭐ Added your new email
+          aws sns subscribe \
+            --topic-arn "${TOPIC_ARN}" \
+            --protocol email \
+            --notification-endpoint monika.kumari@predicta.us \
             --region us-west-2 2>/dev/null || true
           
           aws sns publish \
