--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
+
       - name: 🔨 Build macOS .app (Intel)
         run: |
           mkdir -p hooks
@@ -67,17 +68,20 @@ jobs:
           mkdir -p dist-macos-intel
           cd dist
           zip -r -y "../dist-macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip" "${{ env.APP_NAME }}.app"
+
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: macos-intel-build
           path: dist-macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip
+
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
+
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -86,7 +90,8 @@ jobs:
           S3_URL="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/v${{ env.APP_VERSION }}/macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip"
           echo "s3_url=${S3_URL}" >> $GITHUB_OUTPUT
 
-  # ==================== macOS Apple Silicon BUILD ====================
+
+  # ==================== macOS ARM BUILD ====================
   build-macos-arm:
     name: 🍎 Build macOS (Apple Silicon)
     runs-on: macos-latest
@@ -96,10 +101,12 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
@@ -107,6 +114,7 @@ jobs:
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
+
       - name: 🔨 Build macOS .app (ARM)
         run: |
           mkdir -p hooks
@@ -141,12 +149,14 @@ jobs:
         with:
           name: macos-arm-build
           path: dist-macos-arm/${{ env.APP_NAME }}-macOS-AppleSilicon.zip
+
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
+
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -155,7 +165,8 @@ jobs:
           S3_URL="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/v${{ env.APP_VERSION }}/macos-arm/${{ env.APP_NAME }}-macOS-AppleSilicon.zip"
           echo "s3_url=${S3_URL}" >> $GITHUB_OUTPUT
 
-  # ==================== Linux Ubuntu 22.04 BUILD ====================
+
+  # ==================== Linux Ubuntu 22.04 ====================
   build-linux-22:
     name: 🐧 Build Linux (Ubuntu 22.04)
     runs-on: ubuntu-22.04
@@ -165,10 +176,12 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
       - name: 📦 Install system dependencies
         run: |
           sudo apt-get update
@@ -177,12 +190,14 @@ jobs:
             libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
             libswscale-dev libavformat-dev libavcodec-dev \
             zlib1g-dev fuse libfuse2 imagemagick
+
       - name: 📦 Install Python deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
+
       - name: 🔨 Build Linux Binary
         run: |
           pyinstaller \
@@ -196,17 +211,20 @@ jobs:
           mkdir -p dist-linux-22
           chmod +x dist/${{ env.APP_NAME }}
           mv dist/${{ env.APP_NAME }} dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04
+
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-22-build
           path: dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04
+
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
+
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -215,7 +233,8 @@ jobs:
           S3_URL="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/v${{ env.APP_VERSION }}/linux-ubuntu22/${{ env.APP_NAME }}-ubuntu22.04"
           echo "s3_url=${S3_URL}" >> $GITHUB_OUTPUT
 
-  # ==================== Linux Ubuntu 24.04 BUILD ====================
+
+  # ==================== Linux Ubuntu 24.04 ====================
   build-linux-24:
     name: 🐧 Build Linux (Ubuntu 24.04)
     runs-on: ubuntu-24.04
@@ -225,11 +244,13 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: 📦 Install system dependencies
+
+      - name: 📦 Install Ubuntu dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -237,12 +258,14 @@ jobs:
             libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
             libswscale-dev libavformat-dev libavcodec-dev \
             zlib1g-dev libfuse2t64 imagemagick
+
       - name: 📦 Install Python deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
+
       - name: 🔨 Build Linux Binary
         run: |
           pyinstaller \
@@ -262,12 +285,14 @@ jobs:
         with:
           name: linux-24-build
           path: dist-linux-24/${{ env.APP_NAME }}-ubuntu24.04
+
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
+
       - name: ☁️ Upload to S3
         id: upload
         run: |
@@ -276,27 +301,27 @@ jobs:
           S3_URL="https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/v${{ env.APP_VERSION }}/linux-ubuntu24/${{ env.APP_NAME }}-ubuntu24.04"
           echo "s3_url=${S3_URL}" >> $GITHUB_OUTPUT
 
-  # ==================== Windows BUILD ====================
+
+  # ==================== Windows Build ====================
   build-windows:
     name: 🪟 Windows Build
     runs-on: windows-latest
-    timeout-minutes: 30
     outputs:
       s3_url: ${{ steps.upload.outputs.s3_url }}
 
     env:
       KIVY_GL_BACKEND: angle_sdl2
       KIVY_WINDOW: sdl2
-      KIVY_NO_ARGS: "1"
-      KIVY_NO_CONSOLELOG: "1"
 
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: 📦 Install dependencies
         shell: pwsh
         run: |
@@ -306,7 +331,8 @@ jobs:
           pip install kivy[base]==2.3.0 kivy_deps.sdl2==0.7.0 kivy_deps.glew==0.3.1 kivy_deps.angle==0.4.0
           pip install -r requirements.txt
           pip install pyinstaller
-      - name: 🔧 Create PyInstaller spec file
+
+      - name: 🔧 Create PyInstaller spec
         shell: pwsh
         run: |
           $specContent = @"
@@ -329,12 +355,7 @@ jobs:
                   'kivy.graphics.opengl_utils',
               ],
               hookspath=[],
-              hooksconfig={},
-              runtime_hooks=[],
               excludes=['kivy.core.camera', 'kivy.core.spelling', 'kivy.core.video'],
-              win_no_prefer_redirects=False,
-              win_private_assemblies=False,
-              cipher=block_cipher,
               noarchive=False,
           )
 
@@ -346,15 +367,7 @@ jobs:
               [],
               exclude_binaries=True,
               name='${{ env.APP_NAME }}',
-              debug=False,
-              bootloader_ignore_signals=False,
-              strip=False,
-              upx=True,
               console=False,
-              disable_windowed_traceback=False,
-              target_arch=None,
-              codesign_identity=None,
-              entitlements_file=None,
               icon='wildace.jpeg',
           )
 
@@ -366,7 +379,6 @@ jobs:
               *[Tree(p) for p in (sdl2.dep_bins + glew.dep_bins + angle.dep_bins)],
               strip=False,
               upx=True,
-              upx_exclude=[],
               name='${{ env.APP_NAME }}',
           )
           "@
@@ -379,19 +391,12 @@ jobs:
           .\venv\Scripts\Activate.ps1
           pyinstaller "${{ env.APP_NAME }}.spec" --noconfirm --clean
 
-      - name: 📦 Create ZIP archive
+      - name: 📦 Create ZIP
         shell: pwsh
         run: |
           $AppFolder = "dist\${{ env.APP_NAME }}"
           $ZipFile = "dist\${{ env.APP_NAME }}-Windows.zip"
-          
-          if (Test-Path $AppFolder) {
-            Compress-Archive -Path $AppFolder -DestinationPath $ZipFile -Force
-            Write-Host "✅ ZIP created successfully"
-          } else {
-            Write-Error "❌ Build folder not found: $AppFolder"
-            exit 1
-          }
+          Compress-Archive -Path $AppFolder -DestinationPath $ZipFile -Force
 
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
@@ -415,8 +420,9 @@ jobs:
           $S3_URL = "https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/v${{ env.APP_VERSION }}/windows/${{ env.APP_NAME }}-Windows.zip"
           echo "s3_url=${S3_URL}" >> $env:GITHUB_OUTPUT
 
-  # ==================== SIMPLE PLAIN TEXT EMAIL ====================
-    notify:
+
+  # ==================== EMAIL NOTIFICATION JOB ====================
+  notify:
     name: 📧 Send Build Notification Email
     needs: [build-macos-intel, build-macos-arm, build-linux-22, build-linux-24, build-windows]
     runs-on: ubuntu-latest
@@ -448,7 +454,6 @@ jobs:
           TIMESTAMP=$(date +"%Y-%m-%d %H:%M:%S")
           STATUS="${{ steps.status.outputs.status }}"
 
-          # Create Email Content
           cat > email.txt << EOF
           Build Notification - BeetekShoeMonitor
 
@@ -471,7 +476,6 @@ jobs:
           MESSAGE=$(cat email.txt)
           TOPIC_ARN="arn:aws:sns:us-west-2:535002867190:wildace-build-notifications"
 
-          # Add both emails (will NOT resend subscription confirm if already subscribed)
           for EMAIL in "monika@wildace.in" "monika.kumari@predicta.us"; do
             aws sns subscribe \
               --topic-arn "$TOPIC_ARN" \
@@ -480,7 +484,6 @@ jobs:
               --region us-west-2 2>/dev/null || true
           done
 
-          # Publish the final message
           aws sns publish \
             --topic-arn "$TOPIC_ARN" \
             --subject "Build ${STATUS} - BeetekShoeMonitor v1.0.0" \
